# otus_cpp_professional

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
src/: allocator.h  container.h  lib.cpp  lib.h  main.cpp  manager.h  print_ip.h
tests/: test_allocator.cpp  test_ipfilter.cpp  test_print_ip.cpp
